--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     </head>
     <body>
         <h1>Attack on Titan</h1>
-        <img src ="images/aot.jpg", alt="Attack on Titan, semi realestic fanart">
-        
+        <img src ="images/aot.jpg", alt="Attack on Titan, semi realistic fanart">
+
     </body>
 </html>
